CIB-2322: review 551 update